--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <script src="js/bower_components/angular/angular.min.js"></script>
         <script src="js/bower_components/angular-route/angular-route.min.js"></script>
+        <script src="js/bower_components/angular-cookies/angular-cookies.min.js"></script>
 
         <script src="js/angular/app/app.bootstrap.js"></script>
 
