Add another page to demonstrate routing

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
         <script src="js/angular/app/app.bootstrap.js"></script>
 
         <script src="js/angular/app/components/home/homeController.js"></script>
+        <script src="js/angular/app/components/example/exampleController.js"></script>
     </body>
 </html>
